[project]
name = "liveshot"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "google-genai (>=1.68.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
